提交简单的JS和CSS
提交简单的JS和CSS

--- a/opengroup.html
+++ b/opengroup.html
@@ -4,14 +4,47 @@
 <head>
     <meta charset="UTF-8">
     <title>我的开团</title>
+    <link type="text/css" rel="stylesheet" href="/css/defaultstyles.css">
 </head>
 
+<style>
+    body {
+        margin: 0 auto;
+        background: rgba(247, 248, 249, 1);
+    }
+
+    .opengroug_main_div {
+        margin: .32rem .426667rem 0rem .426667rem;
+        width: 9.146667rem;
+    }
+
+    .opengroug_top {
+        background: rgba(255, 82, 103, 1);
+        border-radius: 8px;
+        height: 3.413333rem;
+    }
+
+    .opengroug_main_div ul {
+        margin-top: .72rem;
+    }
+
+    .opengroug_main_div ul li {
+        height: 2.106667rem;
+        background: rgba(255, 255, 255, 1);
+        border-radius: 8px;
+    }
+</style>
+
 <body>
-    <a href="">这是一个href属性为空的链接</a>
-    <br>
-    <a href="http://www.baidu.com">这是一个href属性设为绝对路径(http://www.baidu.com)的链接</a>
-    <br>
-    <a href="test.html">这是一个href属性设置为相对路径（test.html）的链接</a>
+    <div class="opengroug_main_div">
+        <div class="opengroug_top">
+
+        </div>
+        <ul>
+            <li></li>
+        </ul>
+    </div>
 </body>
+<script src="/js/lib-flexible.js"></script>
 
 </html>
