--- a/index.html
+++ b/index.html
@@ -4,20 +4,25 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport"   content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="/css/mui.min.css">
     <link rel="stylesheet" href="/css/all.css">
     <title>唐小主和她有趣的朋友们</title>
 </head>
 
 <style>
-    .index_main{
+    body {
+        background: rgba(255, 255, 255, 1);
+    }
+
+    .index_main {
         width: 10rem;
-        padding: 0px 0.2rem;
+        padding: 0px .266667rem;
+
     }
 
     .index_top {
-
+        border-bottom: 1px solid rgba(244, 244, 244, 1);
     }
 
     .index_top span {
@@ -30,21 +35,19 @@
         line-height: 23px;
     }
 
-    .index_top .mui-slider {
-
-    }
+    .index_top .mui-slider {}
 
     .mui-slider-item img {
         height: 180px;
         border-radius: 8px;
     }
 
-    .mui-slider-indicator{
-        bottom: 78px;
+    .mui-slider-indicator {
+        bottom: 2.433333rem;
     }
 
     .span-title {
-        height:50px;
+        height: 50px;
         line-height: 50px;
         font-size: 20px;
         font-family: PingFang-SC-Bold;
@@ -57,44 +60,95 @@
         font-family: PingFang-SC-Medium;
         font-weight: 500;
         color: rgba(102, 102, 102, 1);
+        padding-bottom: .426667rem;
     }
 
-    .index_list{
-        padding: 20px 20px;
+    .index_list {
+        margin-top: .386667rem;
     }
 
-    .list_top_title{
-        height:30px;
-        font-size:16px;
-        font-family:PingFang-SC-Medium;
-        font-weight:500;
-        color:rgba(26,29,29,1);
-        line-height:30px;
+    .list_top {
+        /* margin: 0px .426667rem; */
     }
 
-    .list_top_cent{
-        height:24px;
-        font-size:12px;
-        font-family:PingFang-SC-Medium;
-        font-weight:500;
-        color:rgba(102,102,102,1);
-        line-height:24px;
+    .list_top_title {
+        height: 30px;
+        font-size: 16px;
+        font-family: PingFang-SC-Medium;
+        font-weight: 500;
+        color: rgba(26, 29, 29, 1);
+        line-height: 30px;
+        margin-bottom: 0px;
+    }
+
+    .list_top_cent {
+        height: 24px;
+        font-size: 12px;
+        font-family: PingFang-SC-Medium;
+        font-weight: 500;
+        color: rgba(102, 102, 102, 1);
+        line-height: 24px;
+        margin-bottom: 0px;
     }
 
 
-    .list_ul ul{
-        
+    ul {
+        width: 9.466667rem;
+        padding: 0px;
+        margin-top: .386667rem;
+        /* padding: .533333rem .426667rem 0px .426667rem; */
+        /* display: flex; */
     }
 
-    .list_ul_li{
-        width: 40%;
-        border-radius:8px;
+    .list_ul_li {
+        width: 4.266667rem;
+        height: 5.36rem;
+        background: rgba(255, 255, 255, 1);
+        border-radius: 8px;
+        -moz-box-shadow: 2px 2px 5px #999999;
+        -webkit-box-shadow: 2px 2px 5px #999999;
+        box-shadow: 2px 2px 5px #999999;
     }
 
-    .list_ul_li img{
-        width: 128px;
+    .type1 {
+        float: left;
     }
 
+    .type2 {
+        float: right;
+    }
+
+    .list_ul_li img {
+        width: 100%;
+        height: 3.413333rem;
+        border-radius: 8px 8px 0px 0px;
+    }
+
+    .list_ul_li p {
+        padding: 0px .293333rem;
+    }
+
+
+    .li_title {
+        margin-top: .4rem;
+        margin-bottom: 0px;
+        font-size: 18px;
+        font-family: PingFang-SC-Bold;
+        font-weight: bold;
+        color: rgba(26, 29, 29, 1);
+    }
+
+    .li_cent {
+        margin-top: .266667rem;
+        height: .64rem;
+        margin-bottom: 0px;
+        font-size: 12px;
+        font-family: PingFang-SC-Medium;
+        color: rgba(102, 102, 102, 1);
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+    }
 </style>
 
 <body>
@@ -166,21 +220,24 @@
                 <p class="list_top_title">推荐剧本</p>
                 <p class="list_top_cent">在阴谋和欺骗中剥开层层迷雾！</p>
             </div>
-            <div class="list_ul">
-                <ul>
-                    <li class="list_ul_li"> 
-                        <img src="../images/yuantiao.jpg">
-                        <p >三堂会审</p>
-                        <p >大邵开仁年间，政局可谓...</p>
-                    </li>
-                </ul>
-            </div>
+            <ul>
+                <li class="list_ul_li type1">
+                    <img src="../images/yuantiao.jpg">
+                    <p class="li_title">三堂会审</p>
+                    <p class="li_cent">大邵开仁年间，政局可谓...</p>
+                </li>
+                <li class="list_ul_li type2">
+                    <img src="../images/yuantiao.jpg">
+                    <p>三堂会审</p>
+                    <p>大邵开仁年间，政局可谓...</p>
+                </li>
+            </ul>
         </div>
     </div>
 </body>
 
 <script src="/js/mui.min.js"></script>
-<script src="/js/rem01.js"></script>
+<script src="/js/lib-flexible.js"></script>
 
 <script type="text/javascript" charset="utf-8">
     mui.init({
