完成开团页面..
完成开团页面..

--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
                 </li>
                 <li class="list_ul_li type2">
                     <img src="../images/yuantiao.jpg">
-                    <p>三堂会审</p>
-                    <p>大邵开仁年间，政局可谓...</p>
+                    <p class="li_title">三堂会审</p>
+                    <p class="li_cent">大邵开仁年间，政局可谓...</p>
                 </li>
             </ul>
         </div>
